Sticky now prevents any page flow jump when it triggers
Sticky JS adds a padding element of the same height as the top-bar when
scrolling. Once sticky triggers and the top-bar is taken out of the
page flow, the padder prevents a 45px jump.

--- a/scss/foundation/components/modules/_topbar.scss
+++ b/scss/foundation/components/modules/_topbar.scss
@@ -134,6 +134,11 @@
 
     .js-generated { display: none; }
   }
+  
+  // Specifies the height of the sticky padding to prevent any page flow jump when sticky is enabled
+  .top-bar-sticky-padding {
+	  height: $topBarHeight;	
+}
 
   /* Firefox Fixes */
   @-moz-document url-prefix() {
